(fix) layout jumping

--- a/src/components/custom/position-forms-layout/s.module.scss
+++ b/src/components/custom/position-forms-layout/s.module.scss
@@ -17,7 +17,7 @@
   display: grid;
   gap: var(--gap);
   grid-template-columns: 1fr 1fr;
-  max-height: fit-content;
+  height: fit-content;
 
   @media (max-width: #{$max-width-mobile}) {
     grid-template-columns: 1fr;
